新增catalina-home